--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "nodemon server.js",
     "start": "node server.js",
-    "migration": "node migrations/db.js"
+    "migration": "node migrations/db.js",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -25,6 +27,17 @@
     "hbs": "^4.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.19",
-    "mongoose-unique-validator": "^2.0.2"
+    "mongoose-unique-validator": "^2.0.2",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "axios": "^0.18.0",
+    "babel-preset-es2015": "^6.24.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@types/jest": "^24.0.13",
+    "babel-jest": "^24.8.0",
+    "babel-polyfill": "^6.26.0",
+    "jest": "^24.8.0"
   }
 }
