--- a/package.json
+++ b/package.json
@@ -36,8 +36,12 @@
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@types/jest": "^24.0.13",
+    "babel-cli": "^6.26.0",
     "babel-jest": "^24.8.0",
     "babel-polyfill": "^6.26.0",
-    "jest": "^24.8.0"
+    "babel-preset-env": "^1.7.0",
+    "jest": "^24.8.0",
+    "superagent": "^5.0.5",
+    "supertest": "^4.0.2"
   }
 }
